# TEXT_SIMILARITY

./: .gitignore  README.md  main.py  pyproject.toml  similiar.ipynb
app/controllers/: similarity_controller.py  wordllama_controller.py
app/models/: similarity_model.py  wordllama_service.py
app/views/: similarity_request.py
