[tool.poetry]
name = "TASK_SIMILARITY"
version = "0.1.0"
description = "Text similarity project using Sentence Transformers"
authors = ["NetsmartzProject <vickykr1703@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.12"
sentence-transformers = "^2.2.2"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
